k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "starship-inc-web-api"
  labels:
    app.kubernetes.io/name: "starship-inc-web-api"
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: "starship-inc-web-api"
